# conifer

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Jenkinsfile  MANIFEST.in  README.md  dev_requirements.txt  pyproject.toml  pytest.ini  setup.py
.github/workflows/: update-branch-on-pr.yml
conifer/: __init__.py  model.py
conifer-xrt/: pyproject.toml  setup.py
conifer-xrt/src/: conifer_xrt_runtime.cpp
conifer/backends/: __init__.py  common.py
conifer/converters/: __init__.py  common.py  hastie_bdt.joblib  hastie_bdt.onnx  lightgbm.py  onnx.py  sklearn.py  tf_df.py  tmva.py  xgboost.py  ydf.py
conifer/utils/: __init__.py  estimation.py  fixed_point.py  fixed_point_conversions.cpp  metrics.py  misc.py  modelling.py
docs/source/: conf.py  fpu.rst  index.rst
examples/: build_fpu.py  build_fpu_alveo.py  build_fpu_pynq.py  hls_accelerator.py  model_saving_loading.py  pruned_xgboost_to_hls.py  sklearn_RandomForest.py  sklearn_multiclass.py  sklearn_regression.py  sklearn_to_cpp.py  sklearn_to_fpu.py  sklearn_to_hls.py  sklearn_to_vhdl.py  tf_df_binary.py  tf_df_multiclass.py  tf_df_to_fpu_alveo.py  xgboost_multiclass.py  xgboost_to_hls.py  ydf_anomaly_detection.ipynb  ydf_binary.py  ydf_multiclass.py  ydf_oblique.py
tests/: analyze_tests.py  ci-template.yml  ci.yml  cleanup.sh  conftest.py  generate_ci_yaml.py  test_backends.py  test_multiclass.py  test_onnx_to_hls.py  test_performance_estimation.py  test_save_load.py  test_skl_to_hls.py  test_tf_df.py  test_xgb_converter.py  test_xgb_to_hls.py  test_ydf.py  util.py
tests/docker/: Dockerfile  (+1 more)
(+97 files in other folders)
