[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=8",
    "pybind11>=2.10",
]
build-backend = "setuptools.build_meta"

[project]
name = "conifer-xrt"
dynamic = ["version"]
description = "XRT runtime extension for conifer"
requires-python = ">=3.8"
dependencies = [
    "pybind11",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools_scm]
root = ".."
relative_to = "pyproject.toml"
version_scheme = "post-release"
local_scheme = "no-local-version"

